Update WARP documentation, adjust MANIFEST.MF, and add run script for Java 25+ compatibility